Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 <ul>
 <li>74HC595 - Shift Register Single 8-Bit Serial to Serial/Parallel
 <ul>
-<li>[Octopart link](https://octopart.com/search?q=74HC595&amp;filter%5Bfields%5D%5Bavg_avail%5D%5B%5D=%5B1%20TO%20*%5D&amp;view=matrix&amp;filter%5Bfields%5D%5Bspecs.mounting_style.value%5D%5B%5D=Through%20Hole)
+<li>
+<a href="https://octopart.com/search?q=74HC595&amp;filter%5Bfields%5D%5Bavg_avail%5D%5B%5D=%5B1%20TO%20*%5D&amp;view=matrix&amp;filter%5Bfields%5D%5Bspecs.mounting_style.value%5D%5B%5D=Through%20Hole">Octopart link</a>
 </li>
 <li>Or any equivalent. Must provide tri-state outputs. 74HC family for compatibility with both 3.3V and 5V SPI networks.
 </li>
@@ -52,7 +53,8 @@
 </li>
 <li>74HC257 - Quadruple 2-Line To 1-Line Data Selectors/Multiplexers
 <ul>
-<li>[Octopart link](https://octopart.com/search?q=74HC257&amp;filter%5Bfields%5D%5Bavg_avail%5D%5B%5D=%5B1%20TO%20*%5D&amp;view=matrix&amp;filter%5Bfields%5D%5Bspecs.mounting_style.value%5D%5B%5D=Through%20Hole)
+<li>
+<a href="https://octopart.com/search?q=74HC257&amp;filter%5Bfields%5D%5Bavg_avail%5D%5B%5D=%5B1%20TO%20*%5D&amp;view=matrix&amp;filter%5Bfields%5D%5Bspecs.mounting_style.value%5D%5B%5D=Through%20Hole">Octopart link</a>
 </li>
 <li>Or any equivalent. Tri-state outputs not necessary. 74HC family for compatibility with both 3.3V and 5V SPI networks.
 </li>
