Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 </ul>
 </li>
 </ul>
+
+<p>Check out the two sample Arduino programs for examples of how to use.</p>
         </section>
 
         <aside id="sidebar">
